<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dashboard.DashboardFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="260dp"
        android:layout_height="260dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading.json"
        app:lottie_loop="true"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/failed_dashboard"
        android:layout_width="260dp"
        android:layout_height="260dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="error.json"
        app:lottie_loop="true"
        android:visibility="gone"
        android:layout_centerInParent="true"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="-28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        tools:listitem="@layout/item_story"

        />



</RelativeLayout>