...
        android:background="@color/color_main"
        android:gravity="center_vertical"
        android:layout_height="53dp"
        >

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:src="@drawable/button_back"
            android:background="@drawable/pink_oval"
            android:contentDescription="@string/img_desc"/>
...
